Fix Loki and Promtail configurations
- Loki: Remove deprecated chunk_store_config.max_look_back_period
- Loki: Remove deprecated table_manager section
- Promtail: Move pipeline_stages inside scrape_configs
- .env.example: Add note about escaping $ signs (5117) for Docker Compose
- All retention settings are in limits_config

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,9 @@ PROMETHEUS_RETENTION=2y
 # Basic Authentication (For Remote VPS Access)
 # Generate hash with: htpasswd -nbB remote your-password
 # Use only the hash part (everything after "remote:")
+# IMPORTANT: Escape $ signs by doubling them ($$) for Docker Compose
 BASIC_AUTH_USER=remote
-BASIC_AUTH_PASSWORD_HASH=$2a$12$replace-with-your-bcrypt-hash
+BASIC_AUTH_PASSWORD_HASH=$$2a$$12$$replace-with-your-bcrypt-hash
 
 # Optional: VPC Configuration (For DigitalOcean)
 # Document your VPC private IP here for reference
