Add Grafana Dockerfile and fix provisioning
- Create Dockerfile that copies provisioning to image
- Move provisioning from grafana/ subdirectory to root
- Change docker-compose.yml from image to build
- Remove volume mount for provisioning (now in image)
- Matches working original project structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,9 @@ services:
       - loki
 
   grafana:
-    image: grafana/grafana:latest
+    build:
+      context: ./
+      dockerfile: Dockerfile
     container_name: monitoring-grafana
     restart: unless-stopped
     user: "472"
@@ -38,7 +40,6 @@ services:
       - GF_INSTALL_PLUGINS=
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning:ro
     depends_on:
       - prometheus
       - loki
