Add UIDs to datasources for dashboard compatibility
- Prometheus: uid t4f0shgRk (matches existing dashboards)
- Loki: uid loki
- Fixes dashboards showing 'No data' due to missing datasource UID

--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -4,6 +4,7 @@ datasources:
   # Prometheus datasource
   - name: Prometheus
     type: prometheus
+    uid: t4f0shgRk
     access: proxy
     url: http://prometheus:9090
     isDefault: true
@@ -17,6 +18,7 @@ datasources:
   # Loki datasource
   - name: Loki
     type: loki
+    uid: loki
     access: proxy
     url: http://loki:3100
     editable: false
