Fix Loki datasource UID
- Change from 'loki' to 'loki-datasource'
- Matches UID used in container-logs.json dashboard
- Fixes: Datasource provisioning error: data source not found

--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -18,7 +18,7 @@ datasources:
   # Loki datasource
   - name: Loki
     type: loki
-    uid: loki
+    uid: loki-datasource
     access: proxy
     url: http://loki:3100
     editable: false
