--- a/provisioning/datasources/datasources.yml
+++ b/provisioning/datasources/datasources.yml
@@ -1,28 +1,57 @@
 apiVersion: 1
 
+deleteDatasources:
+  - name: Prometheus
+    orgId: 1
+
 datasources:
-  # Prometheus datasource
   - name: Prometheus
     type: prometheus
-    uid: t4f0shgRk
     access: proxy
+    orgId: 1
     url: http://prometheus:9090
+    password:
+    user:
+    database:
+    basicAuth: false
+    basicAuthUser:
+    basicAuthPassword:
+    withCredentials:
     isDefault: true
-    editable: false
     jsonData:
-      timeInterval: 15s
-      queryTimeout: 60s
-      httpMethod: POST
+      graphiteVersion: "1.1"
+      tlsAuth: false
+      tlsAuthWithCACert: false
+    secureJsonData:
+      tlsCACert: "..."
+      tlsClientCert: "..."
+      tlsClientKey: "..."
     version: 1
+    editable: true
+    uid: t4f0shgRk
 
-  # Loki datasource
   - name: Loki
     type: loki
-    uid: loki-datasource
     access: proxy
+    orgId: 1
     url: http://loki:3100
-    editable: false
+    password:
+    user:
+    database:
+    basicAuth: false
+    basicAuthUser:
+    basicAuthPassword:
+    withCredentials:
+    isDefault: false
     jsonData:
       maxLines: 1000
-      timeout: 60
+      derivedFields:
+        - datasourceName: Prometheus
+          matcherRegex: "container=\"([^\"]+)\""
+          name: Container metrics
+          datasourceUid: t4f0shgRk
+          url: '/explore?orgId=1&left=["now-1h","now","Prometheus",{"expr":"container_name=\"$${__value.raw}\""}]'
+    secureJsonData: {}
     version: 1
+    editable: true
+    uid: loki-datasource
