Enable Caddy metrics endpoint and Prometheus scraping
- Expose Caddy admin API on port 2019 for metrics
- Add metrics directive to Caddyfile global options
- Enable Caddy scrape job in Prometheus configuration

--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,5 +1,7 @@
 {
     # Global options
+    admin 0.0.0.0:2019
+    metrics
     email admin@{$DOMAIN}
     # Uncomment for staging during testing to avoid rate limits:
     # acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
