--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -28,10 +28,11 @@ scrape_configs:
         labels:
           instance: 'central-loki'
 
-  # Optional: Scrape Caddy metrics if enabled
-  # - job_name: 'caddy'
-  #   static_configs:
-  #     - targets: ['caddy:2019']
+  - job_name: 'caddy'
+    static_configs:
+      - targets: ['caddy:2019']
+        labels:
+          instance: 'central-caddy'
 
 # Remote write receiver is enabled via command line flag:
 # --web.enable-remote-write-receiver
