--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,8 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention.time=${PROMETHEUS_RETENTION:-2y}'
+      - '--storage.tsdb.retention.time=${PROMETHEUS_RETENTION:-14d}'
+      - '--storage.tsdb.retention.size=10GB'
       - '--web.listen-address=0.0.0.0:9090'
       - '--web.enable-remote-write-receiver'
       - '--web.enable-lifecycle'
